fix websop modal scroll css on mobile

--- a/src/sources/forus-webshop/scss/_common/components/_modals.scss
+++ b/src/sources/forus-webshop/scss/_common/components/_modals.scss
@@ -95,6 +95,7 @@
         position: relative;
         width: 1200px;
         max-width: 100%;
+        max-height: 100%;
         background: #fefefe;
         min-height: 100px;
         overflow: hidden;
